vlib/v/checker/tests/enum_name_err.out
vlib/v/checker/tests/enum_name_err.v:1:6: error: enum name `color` must begin with a capital letter
    1 | enum color {
      |      ~~~~~
    2 |     green
    3 |     yellow
