vlib/v/checker/tests/enum_name_err.vv
enum color {
    green
    yellow
}
fn main(){
	println('hello')
}
